created a page for classic macaroni salad

--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
     <a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer"
       >lasagna</a
     >
+    <a
+      href="recipes/classicmacaronisalad.html"
+      target="_blank"
+      rel="noopener noreferrer"
+      >classic macaroni salad</a
+    >
   </body>
 </html>
