added a recipe for brownies

--- a/recipes/macaronisalad.html
+++ b/recipes/macaronisalad.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>classic macaroni salad recipe</title>
+    <title>macaroni salad recipe</title>
   </head>
   <body>
-    <h1>classic macaroni salad</h1>
+    <h1>macaroni salad</h1>
     <img
-      src="images/classicmacaronisalad.jpg"
-      alt="an image of classic macaroni salad"
+      src="images/macaronisalad.jpg"
+      alt="an image of macaroni salad"
       height="300"
       width="400"
     />
     <h2>description</h2>
     <p>
-      classic macaroni salad is a beloved dish cherished for its simplicity and
+      macaroni salad is a beloved dish cherished for its simplicity and
       nostalgic charm. it embodies the essence of summer picnics and backyard
       barbecues with its refreshing combination of tender macaroni pasta, crisp
       vegetables, and tangy dressing. the pasta, typically elbow macaroni, is
@@ -24,9 +24,9 @@
       onions. the dressing, often a creamy blend of mayonnaise, mustard, and
       vinegar, coats each ingredient, imparting a creamy richness and a
       delightful tanginess to every bite. whether served as a side dish or a
-      standalone meal, classic macaroni salad delights the palate with its
-      vibrant flavors and satisfying textures, making it a perennial favorite
-      for gatherings and potlucks alike.
+      standalone meal, macaroni salad delights the palate with its vibrant
+      flavors and satisfying textures, making it a perennial favorite for
+      gatherings and potlucks alike.
     </p>
     <h2>ingredients</h2>
     <ul>
