--- a/index.html
+++ b/index.html
@@ -15,10 +15,18 @@
       </li>
       <li>
         <a
-          href="recipes/classicmacaronisalad.html"
+          href="recipes/macaronisalad.html"
           target="_blank"
           rel="noopener noreferrer"
-          >classic macaroni salad</a
+          >macaroni salad</a
+        >
+      </li>
+      <li>
+        <a
+          href="recipes/brownies.html"
+          target="_blank"
+          rel="noopener noreferrer"
+          >brownies</a
         >
       </li>
     </ul>
