adjusted the dimensions of the images

--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -8,12 +8,7 @@
   </head>
   <body>
     <h1>brownies</h1>
-    <img
-      src="images/brownies.jpg"
-      alt="an image of brownies"
-      height="300"
-      width="400"
-    />
+    <img src="images/brownies.jpg" alt="an image of brownies" />
     <h2>description</h2>
     <p>
       brownies are a delectable treat that never fails to satisfy the sweet
