--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,12 +8,7 @@
   </head>
   <body>
     <h1>lasagna</h1>
-    <img
-      src="images/lasagna.jpg"
-      alt="an image of lasagna"
-      height="300"
-      width="400"
-    />
+    <img src="images/lasagna.jpg" alt="an image of lasagna" />
     <!-- in order to actually show this image, the lasagna.html file and the images folder must either be on the same level, or this lasagna.html files needs to be higher than the image file -->
     <h2>description</h2>
     <p>
