--- a/recipes/macaronisalad.html
+++ b/recipes/macaronisalad.html
@@ -8,12 +8,7 @@
   </head>
   <body>
     <h1>macaroni salad</h1>
-    <img
-      src="images/macaronisalad.jpg"
-      alt="an image of macaroni salad"
-      height="300"
-      width="400"
-    />
+    <img src="images/macaronisalad.jpg" alt="an image of macaroni salad" />
     <h2>description</h2>
     <p>
       macaroni salad is a beloved dish cherished for its simplicity and
