--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>odin recipes</title>
+    <title>anshul's recipe book</title>
   </head>
   <body>
-    <h1>odin recipes</h1>
+    <h1>the magic begins here</h1>
+    <p>recipes to exquisite dishes, all on one page!</p>
     <ul>
       <li>
         <a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer"
